--- a/CSS/css3.html
+++ b/CSS/css3.html
@@ -3,7 +3,8 @@
 <head>
     <meta charset="utf-8">
     <title>CSS3</title>
-    <link rel="stylesheet" type="text/css" href="css3.css">
+    <link rel="stylesheet" type="text/css" href="css3.css" media="screen and (min-width: 500px)">
+    <link rel="stylesheet" type="text/css" href="css3-small.css" media="screen and (max-width: 501px)">
 
 </head>
 <body>
