--- a/Script/Event/Listener/index.html
+++ b/Script/Event/Listener/index.html
@@ -19,7 +19,7 @@
         div{
             width: 100px;
             height: 100px;
-            border: solid black 1px;
+            border: solid white 1px;
             position: absolute;
             top: 200px;
             left: 400px;
